--- a/mapyto_django/mapyto_django_app/templates/mapyto.html
+++ b/mapyto_django/mapyto_django_app/templates/mapyto.html
@@ -5,95 +5,144 @@
     <head>
         {% load static %}
         <meta charset="UTF-8">
+
         <title>MaPyto | Fast & Optimized Itineraries</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+
         <link rel="icon" type="image/png" href="{% static 'location.png' %}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+        <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static '/css/all.min.css' %}" rel="stylesheet">
+
+        <script src="{% static '/js/jquery-3.6.0.min.js' %}"></script>
+        <script src="{% static '/js/bootstrap.bundle.min.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
         <script>
             var i = 1;
             var liste;
+
             window.onload = function(){
                 liste = document.getElementById("table");
             }
 
             function add(){
                 var tr = document.createElement("tr");
+                tr.id = i;
+                tr.style.display = "none";
+
                 var td = document.createElement("td");
+                td.classList.add("input-group");
+                td.classList.add("input-group-lg");
+
                 var text = document.createElement("input");
                 text.type = "text";
                 text.name = "adress_" + i;
-                text.placeholder = "Adress n°" + i;
+                text.placeholder = "Address n°" + i;
                 text.classList.add("form-control");
+                text.classList.add("form-control-lg");
+
+                var app = document.createElement("div");
+                app.classList.add("input-group-append");
+
+                var btn = document.createElement("a");
+                btn.classList.add("btn");
+                btn.classList.add("btn-secondary");
+                btn.classList.add("p-3");
+                btn.style.fontFamily = "'Quicksand', sans-serif";
+                btn.style.fontWeight = "bold";
+                btn.setAttribute("onclick", "del()");
+
+                var logo = document.createElement("i");
+                logo.classList.add("far");
+                logo.classList.add("fa-times-circle");
+                logo.classList.add("text-center");
+                logo.classList.add("mt-1");
+                logo.style.fontSize = "1.4em";
+
+                btn.appendChild(logo);
+                app.appendChild(btn);
                 td.appendChild(text);
+                td.appendChild(app);
                 tr.appendChild(td);
                 liste.appendChild(tr);
+                $("#"+i).show("slow");
                 i++;
 
                 document.getElementById("numb").value = i;
             }
+
+            function del(){
+                i--;
+                tr = document.getElementById(i);
+                $(tr).hide("slow");
+                setTimeout(function() { tr.remove(); }, 500);
+            }
         </script>
     </head>
 
-    <body class="bg-dark pr-5 pl-5">
-        <header class="pt-1 pr-5 pl-5">
-            <h1 class="text-light text-center" style="font-size: 150px; font-family: 'Potta One', cursive;">
-                MaPyto<span style="color: orange;">.</span></h1>
+    <body class="container" style="background : linear-gradient(#d8e2dc, #FD9886) fixed;">
+
+        <header class="pt-1 pr-5 pl-5 mb-5 mt-2">
+            <h1 class="text-center" style="font-size: 8em; font-family: 'Quicksand', sans-serif; color: #7EA08B">
+                <i class="fas fa-map-marked-alt"></i> MaPyto
+            </h1>
         </header>
 
-        <div class="bg-light m-5 p-5 rounded">
+        <div class="mt-3 mb-5 p-5 shadow-lg" style="background-color : #f8edeb; border-radius: 20px;">
 
             <form method="POST" id="form">{% csrf_token %}
 
                         {% if error %}
-                            <div class="alert alert-danger" role="alert">
-                                MaPyto find errors in your inputs, please check your adresses.
+                            <div class="alert alert-danger" role="alert" id="error">
+                                MaPyto find errors in your inputs, please make a check.
+                                <a onclick='$("#error").slideToggle("slow");' class="float-end" style="color: black;"><i class="far fa-times-circle"></i></a>
                             </div>
                         {% endif %}
 
-                        <label style="font-family: 'Potta One', cursive;" class="text-center">
-                            Please, indicate your list of adresse as follows :<span style="text-decoration: underline;">"Street name, CITY"</span>
-                            <span style="font-style: italic;">(put the adress where you are in the first position)</span>
-                        </label>
+                        <p style="font-family: 'Quicksand', sans-serif; font-size: 1.5em" class="text-center">
+                            Please, indicate your list of addresses as follows : <span style="text-decoration: underline;">Street name, CITY</span> or <span style="text-decoration: underline;">CITY</span>
+                            <br>
+                            <span style="font-style: italic;">(put the address where you are in the first position)</span>
+                        </p>
 
                         <table class="table">
                             <tbody id="table">
                                 <input id="numb" name="numb" hidden>
-                                <tr><td><input type="text" name="adress_0" placeholder="Your departure address" class="form-control"></td></tr>
-                                {% if rows %}
-                                    {% for i in rows %}
-                                        <tr><td><input type="text" name="adress_{{ i }}" placeholder="Adress n°{{ i }}" class="form-control"></td></tr>
-                                    {% endfor %}
-                                        <script>var i = {{ index }};</script>
-                                {% endif %}
-
+                                <tr id="0">
+                                    <td class="input-group input-group-lg">
+                                        <input type="text" name="adress_0" placeholder="Your departure address" class="form-control form-control-lg">
+                                        <div class="input-group-append">
+                                            <a class="btn btn-secondary p-3">
+                                                <i class="fas fa-map-marker-alt" style="font-size : 1.55em"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
 
-                        <div id="align">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                        <div class="row">
+                            <div class="col-6">
+                                <a class="btn btn-lg text-light float-end" style="background-color: #FEC5BB; font-family: 'Quicksand', sans-serif; font-weight : bold;" onclick="add()">Add a line</a>
+                            </div>
+                            <div class="col-6">
+                                <button type="submit" class="btn btn-lg text-light" style="background-color: #98CFD7; font-family: 'Quicksand', sans-serif; font-weight: bold;">Submit</button>
+                            </div>
                         </div>
                     </form><br>
 
-            <button class="btn btn-danger position-absolute start-50 translate-middle" onclick="add()">+</button>
-
 
             {% if url %}
-                <div class="alert alert-success" role="alert">
-                    Here is your URL => <a href="{{ url }}" class="alert-link">CLICK HERE</a>
+                <div class="alert shadow-lg text-center" role="alert" style="background-color: #8AA895; font-family: 'Quicksand', sans-serif; font-weight: bold;" id="url">
+                    Here is your URL => <a href="{{ url }}" class="alert-link" target="_blank">CLICK HERE</a>
+                    <a onclick='$("#url").slideToggle("slow");' class="float-end" style="color: black;"><i class="far fa-times-circle"></i></a>
                 </div>
-                <a class="btn btn-primary" href="/">Go back</a>
             {% endif %}
 
         </div>
-    </body>
 
-    <footer class="container text-center">
-        <a href="https://www.twitter.com/s0rcy_r" target="blank">
-            <img src="{% static 'twitter.png' %}" style="width: 150px;">
-        </a>
-    </footer>
+    </body>
 
 </html>
