--- a/mapyto_django/mapyto_django_app/templates/mapyto.html
+++ b/mapyto_django/mapyto_django_app/templates/mapyto.html
@@ -25,6 +25,7 @@
 
             window.onload = function(){
                 liste = document.getElementById("table");
+                document.getElementById("numb").value = i;
             }
 
             function add(){
