--- a/mapyto_django/mapyto_django_app/templates/mapyto.html
+++ b/mapyto_django/mapyto_django_app/templates/mapyto.html
@@ -93,18 +93,25 @@
     <body class="container" style="background : linear-gradient(#d8e2dc, #FD9886) fixed;">
 
         <header class="pt-1 pr-5 pl-5 mb-5 mt-2">
-            <h1 class="text-center" style="font-size: 8em; font-family: 'Quicksand', sans-serif; color: #7EA08B">
-                <i class="fas fa-map-marked-alt"></i> MaPyto
-            </h1>
+            <a href="/" style="text-decoration: none;">
+                <h1 class="text-center" style="font-size: 8em; font-family: 'Quicksand', sans-serif; color: #7EA08B">
+                    <i class="fas fa-map-marked-alt"></i> MaPyto
+                </h1>
+            </a>
         </header>
 
         <div class="mt-3 mb-5 p-5 shadow-lg" style="background-color : #f8edeb; border-radius: 20px;">
 
             <form method="POST" id="form">{% csrf_token %}
 
-                        {% if error %}
+                        {% if error_type == "MaPyto" %}
                             <div class="alert alert-danger" role="alert" id="error">
                                 MaPyto find errors in your inputs, please make a check.
+                                <a onclick='$("#error").slideToggle("slow");' class="float-end" style="color: black;"><i class="far fa-times-circle"></i></a>
+                            </div>
+                        {% elif error_type == "Address" %}
+                            <div class="alert alert-danger" role="alert" id="error">
+                                You should put at least two addresses.
                                 <a onclick='$("#error").slideToggle("slow");' class="float-end" style="color: black;"><i class="far fa-times-circle"></i></a>
                             </div>
                         {% endif %}
@@ -120,7 +127,7 @@
                                 <input id="numb" name="numb" hidden>
 
 
-                                {% if error %}
+                                {% if error_type == "Mapyto" %}
                                     <script>var i = {{ i }};</script>
                                     {% for i, j in content %}
                                         <tr id="{{ j }}">
